; ModuleID = '/home/carl/AnghaBench/libgit2/tests/core/extr_path.c_check_fromurl.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/core/extr_path.c_check_fromurl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_BUF_INIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i32)* @check_fromurl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_fromurl(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* @GIT_BUF_INIT, align 4
  store i32 %8, i32* %7, align 4
  %9 = load i32, i32* %6, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %14, label %11

11:                                               ; preds = %3
  %12 = load i8*, i8** %4, align 8
  %13 = icmp ne i8* %12, null
  br label %14

14:                                               ; preds = %11, %3
  %15 = phi i1 [ true, %3 ], [ %13, %11 ]
  %16 = zext i1 %15 to i32
  %17 = call i32 @assert(i32 %16)
  %18 = load i32, i32* %6, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %27, label %20

20:                                               ; preds = %14
  %21 = load i8*, i8** %5, align 8
  %22 = call i32 @git_path_fromurl(i32* %7, i8* %21)
  %23 = call i32 @cl_git_pass(i32 %22)
  %24 = load i8*, i8** %4, align 8
  %25 = call i32 @git_buf_cstr(i32* %7)
  %26 = call i32 @cl_assert_equal_s(i8* %24, i32 %25)
  br label %31

27:                                               ; preds = %14
  %28 = load i8*, i8** %5, align 8
  %29 = call i32 @git_path_fromurl(i32* %7, i8* %28)
  %30 = call i32 @cl_git_fail(i32 %29)
  br label %31

31:                                               ; preds = %27, %20
  %32 = call i32 @git_buf_dispose(i32* %7)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_path_fromurl(i32*, i8*) #1

declare dso_local i32 @cl_assert_equal_s(i8*, i32) #1

declare dso_local i32 @git_buf_cstr(i32*) #1

declare dso_local i32 @cl_git_fail(i32) #1

declare dso_local i32 @git_buf_dispose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
